test/valid/fc36994_TestConstructors/Constructor1.plume
/**
 * For testing constructors
 * @author 36994, César Santos
 */
class Constructor1 extends Object is
  field a : Integer
  field b : Integer
  method addFields : () -> Integer is
    a + b